--- a/cv2/config/data.yaml
+++ b/cv2/config/data.yaml
@@ -4,7 +4,7 @@ val: ../train/images
 test: ../test/images
 
 nc: 22
-names: ['1', '10', '11', '12', '2', '3', '4', '5', '6', '7', '8', '9', 'B1', 'B2', 'B3', 'B4', 'B5', 'Close', 'Green', 'Human', 'Open', 'Panel']
+names: ['Open', 'Close', 'B1', 'B2', 'B3', 'B4', 'B5', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', 'Green', 'Human', 'Panel']
 
 roboflow:
   workspace: elevator-rigpk
