--- a/cv2/config/data.yaml
+++ b/cv2/config/data.yaml
@@ -3,8 +3,8 @@ train: ../train/images
 val: ../train/images
 test: ../test/images
 
-nc: 22
-names: ['1', '10', '11', '12', '2', '3', '4', '5', '6', '7', '8', '9', 'B1', 'B2', 'B3', 'B4', 'B5', 'Close', 'Green', 'Human', 'Open', 'Panel']
+nc: 20
+names: ['Open', 'Close', 'B5', 'B4', 'B3', 'B2', 'B1', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', 'Panel']
 
 roboflow:
   workspace: elevator-rigpk
